--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.4",
     "@tailwindcss/vite": "^4.1.11",
     "@uiw/codemirror-theme-dracula": "^4.25.1",
     "@uiw/react-codemirror": "^4.25.1",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -29,5 +32,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
-  }
+  },
+  "homepage": "https://avishi-bafna.github.io/ai-code-convertor/"
 }
